[tool.poetry]
name = "docker-mlflow"
version = "1.0.0"
description = ""
authors = ["Seungha Son <linuxias@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.5"
scikit-learn = "^1.2.0"
mleap = "^0.17.0"
PyMySQL = "^1.0.2"
psycopg2-binary = "^2.9.1"
boto3 = "^1.19.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

